<resources>
    <string name="app_name">NFMovies</string>
    <string name="title_home">首页</string>
    <string name="title_more">更多</string>
    <string name="title_search">搜索</string>
    <string name="title_live">直播</string>
    <string name="title_liked">收藏</string>
	
	<string name="title_activity_splash">SplashActivity</string>

    <string name="nfmovies">奈菲影视</string>
    <string name="apkgm">团长资源</string>
    <string name="ddrk">低端影视</string>
    <string name="duboku">独播库</string>

    <string name="about_string">\n\n
        <a href="">Made by Future Technologies</a>\n\n
        <a href="https://www.nfmovies.com/">奈菲影视</a>\n\n
        <a href="https://b.apkgm.top/">团长资源</a>\n\n
        <a href="http://ddrk.me/">低端影视</a>\n\n
        <a href="https://www.duboku.net">独播库</a>\n\n
    </string>

    <string name="error">似乎出现了一点问题</string>

    <string name="select_player">请选择播放器</string>
    <string name="load_play_url_error">加载播放链接失败</string>
    <string name="system_too_old">您的系统版本过低，无法使用内置播放器。请选择其他播放器。</string>

    <string name="not_found">未找到</string>

    <string name="like_success">收藏成功</string>
    <string name="dislike_success">取消收藏</string>
    <string name="not_loaded">未加载内容</string>

    <string name="ready_to_play">准备播放</string>

    <string name="press_again_to_exit">再按一次退出程序</string>

    <string name="downloading_sub">正在下载字幕</string>
    <string name="download_sub_success">下载字幕成功</string>
    <string name="download_sub_failed">下载字幕失败</string>

    <string name="copy_link_success">复制播放链接成功</string>

    <string name="load_cancelling">正在取消加载……</string>
    <string name="load_failed">加载失败</string>
    <string name="no_resource">暂时找不到资源哦</string>

    <string name="searching">正在搜索</string>

    <string name="choose_your_device">请选择播放设备</string>
    <string name="clear_cache_success">清理成功</string>
    <string name="current_version_name">当前版本</string>
    <string name="new_version_msg">新版本信息</string>
    <string name="about">关于</string>
    <string name="confirm">确定</string>
    <string name="have_new_version">检测到新版本</string>
    <string name="updating">正在检查更新</string>
    <string name="already_the_newest_version">已经是最新版本</string>
    <string name="check_new_version_failed">检查更新失败</string>
    <string name="live_keyword">作者大帅比</string>
    
    <string name="source">来源: </string>
    <string name="play">播放</string>

</resources>
