<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/navigation_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/title_home"/>
    <item
            android:id="@+id/navigation_live"
            android:icon="@drawable/ic_live_tv_black_24dp"
            android:title="@string/title_live"/>

    <item
            android:id="@+id/navigation_search"
            android:icon="@drawable/ic_search_black_24dp"
            android:title="@string/title_search"/>

    <item   android:id="@+id/navigation_liked"
            android:icon="@drawable/ic_favorite_border_black_24dp"
            android:title="@string/title_liked"/>

    <item
            android:id="@+id/navigation_more"
            android:icon="@drawable/ic_dehaze_black_24dp"
            android:title="@string/title_more"/>

</menu>
